Azurillious, spell unit tests, and spell updates (#643)
* Azurillious - blue sparks charm
* added Azurillious charm
* added tests for all the Sparks spells
* added mockito to test dependencies
* lowered level of Flagrante curse to match spell level
* reworked when Sparks spells calculate damage
* lowered Verdimillious' damage
* increased Vermillious Tria damage
* Ascendio height increase
* added slow falling to protect against fall damage
* moved Ascendio from DADA to Charms since it is taught by flitwick in 7th year
* Deletrius rework
* made deletrius target area effect clouds
* changed the spell used in O2SpellTest since deletrius now doesn't send a failure message
* Renamed abstract classes so names are consistent
* Added tests for ChangeEntitySize spells
* pulled radius and number of targets counts in to shared functions
* Added multi-target to Obscuro

https://github.com/Azami7/Ollivanders2/issues/642
https://github.com/Azami7/Ollivanders2/issues/206